--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<li><a href="#two">Things I Can Do</a></li>
 						<li><a href="#three">A Few Accomplishments</a></li>
 						<li><a href="#four">Contact</a></li>
-						<li><a href="file:///C:/Users/babyb/Desktop/Sarah%20McIntosh-Bartholomew.pdf" download>Resume</a></li>
+						<!--<li><a href="file:///C:/Users/babyb/Desktop/Sarah%20McIntosh-Bartholomew.pdf" download>Resume</a></li> --> 
 					</ul>
 				</nav>
 				<footer>
@@ -92,7 +92,7 @@
 									<div class="features">
 
 										<article>
-											<a href="https://sarahmci425.github.io/Self_Guided/" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://sarahmci425.github.io/Self_Guided/" class="image"><img src="SarahMcI425.github.io/images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Self Guided Skills Project</h4>
 												<p>For this project we had to pick a certain skill to hone in on. I picked creating graphs with a application called Tableau that allows you to load in data and you can created different kind of data visualization with it.</p>
@@ -100,7 +100,7 @@
 										</article>
 
 										<article>
-											<a href="https://sarahmci425.github.io/Girl%20Scouts/" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://sarahmci425.github.io/Girl%20Scouts/" class="image"><img src="SarahMcI425.github.io/images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Girl Scout Troops</h4>
 												<p>I am volunteering to build a active site for a local Girl Scout Troop back home. The site will show active locations of where they will be selling cookies and the dates and times they will be there.
@@ -111,7 +111,7 @@
 
 										<!-- Add in the the site for your group project once completed -->
 										<article>
-											<a href="#" class="image"><img src="images/hero1.jpg" alt="" /></a>
+											<a href="https://ramiyer1998.github.io/Pittsburgh-Yelp-Data/" class="image"><img src="SarahMcI425.github.io/images/hero1.jpg" alt="" /></a>
 													<div class="inner">
 															<h4>Pittsburgh Cuisine</h4>
 															<p>This was a group project that we scrapped data from Yelp to compile a list of 500 plus data on different locations you can go an eat at in Allegeny County.
@@ -121,7 +121,7 @@
 										</article>
 
 										<article>
-											<a href="https://sarahmci425.github.io/Database_Project/index.html" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="https://sarahmci425.github.io/Database_Project/index.html" class="image"><img src="SarahMcI425.github.io/images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Pittsburgh Database Project</h4>
 												<p>This project was to take data from an open source and use it to create maps in the program tableau.</p>
