--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 										<article>
 											<a href="https://sarahmci425.github.io/Self_Guided/" class="image"><img src="SarahMcI425.github.io/images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Self Guided Skills Project</h4>
+												<a href="https://sarahmci425.github.io/Self_Guided/"><h4>Self Guided Skills Project</h4></a>
 												<p>For this project we had to pick a certain skill to hone in on. I picked creating graphs with a application called Tableau that allows you to load in data and you can created different kind of data visualization with it.</p>
 											</div>
 										</article>
@@ -102,7 +102,7 @@
 										<article>
 											<a href="https://sarahmci425.github.io/Girl%20Scouts/" class="image"><img src="SarahMcI425.github.io/images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Girl Scout Troops</h4>
+												<a href="https://sarahmci425.github.io/Girl%20Scouts/"><h4>Girl Scout Troops</h4></a>
 												<p>I am volunteering to build a active site for a local Girl Scout Troop back home. The site will show active locations of where they will be selling cookies and the dates and times they will be there.
 												   It will also have a contact page to be able to join the troop and a page to show what badges the girls are working towards.
 												</p>
@@ -113,7 +113,7 @@
 										<article>
 											<a href="https://ramiyer1998.github.io/Pittsburgh-Yelp-Data/" class="image"><img src="SarahMcI425.github.io/images/hero1.jpg" alt="" /></a>
 													<div class="inner">
-															<h4>Pittsburgh Cuisine</h4>
+															<a href="https://ramiyer1998.github.io/Pittsburgh-Yelp-Data/"><h4>Pittsburgh Cuisine</h4></a>
 															<p>This was a group project that we scrapped data from Yelp to compile a list of 500 plus data on different locations you can go an eat at in Allegeny County.
 																	You can view the data in different data visualization options.
 															</p>
@@ -123,7 +123,7 @@
 										<article>
 											<a href="https://sarahmci425.github.io/Database_Project/index.html" class="image"><img src="SarahMcI425.github.io/images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Pittsburgh Database Project</h4>
+												<a href="https://sarahmci425.github.io/Database_Project/index.html"> <h4>Pittsburgh Database Project</h4></a>
 												<p>This project was to take data from an open source and use it to create maps in the program tableau.</p>
 											</div>
 										</article>
