--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 	<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Simple House Template</title>
+    <title>Sarah McIntosh-Bartholomew Website</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet" />    
 	<link href="css/templatemo-style.css" rel="stylesheet" />
 </head>
 <!--
 
+This websiter template was copied from this following location
 Simple House
 
 https://templatemo.com/tm-539-simple-house
@@ -28,8 +29,8 @@ https://templatemo.com/tm-539-simple-house
 						<div class="col-md-6 col-12">
 							<img src="img/simple-house-logo.png" alt="Logo" class="tm-site-logo" /> 
 							<div class="tm-site-text-box">
-								<h1 class="tm-site-title">Simple House</h1>
-								<h6 class="tm-site-description">new restaurant template</h6>	
+								<h1 class="tm-site-title">Sarah McIntosh-Bartholomew Website</h1>
+								<h6 class="tm-site-description">Sarah McIntosh-Bartholomew Professional Website</h6>	
 							</div>
 						</div>
 						<nav class="col-md-6 col-12 tm-nav">
@@ -46,8 +47,9 @@ https://templatemo.com/tm-539-simple-house
 
 		<main>
 			<header class="row tm-welcome-section">
-				<h2 class="col-12 text-center tm-section-title">Welcome to Simple House</h2>
-				<p class="col-12 text-center">Total 3 HTML pages are included in this template. Header image has a parallax effect. You can feel free to download, edit and use this TemplateMo layout for your commercial or non-commercial websites.</p>
+				<h2 class="col-12 text-center tm-section-title">Welcome to My World</h2>
+				<p class="col-12 text-center">Hello, My name is Sarah McIntosh-Bartholomew. I am a transplant from Philadelphia who current resides in Bethel Park. I am a Web developer, SEO stragtist, and someone who has passion in Marketing. Welcome to my World! Come explore with me.
+				</p>
 			</header>
 			
 			<div class="tm-paging-links">
