--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ https://templatemo.com/tm-539-simple-house
 			<div class="tm-paging-links">
 				<nav>
 					<ul>
-						<li class="tm-paging-item"><a href="#" class="tm-paging-link active">Pizza</a></li>
-						<li class="tm-paging-item"><a href="#" class="tm-paging-link">Salad</a></li>
-						<li class="tm-paging-item"><a href="#" class="tm-paging-link">Noodle</a></li>
+						<li class="tm-paging-item"><a href="#" class="tm-paging-link active">My Websites</a></li>
+						<li class="tm-paging-item"><a href="#" class="tm-paging-link">My Skills</a></li>
+						<li class="tm-paging-item"><a href="#" class="tm-paging-link">My Certifications</a></li>
 					</ul>
 				</nav>
 			</div>
