--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ https://templatemo.com/tm-539-simple-house
 				</div> <!-- gallery page 1 -->
 				
 				<!-- gallery page 2 -->
-				<div id="tm-gallery-page-salad" class="tm-gallery-page hidden">
+				<div id="tm-gallery-page-my_skills" class="tm-gallery-page hidden">
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/04.jpg" alt="Image" class="img-fluid tm-gallery-img" />
@@ -213,7 +213,7 @@ https://templatemo.com/tm-539-simple-house
 				</div> <!-- gallery page 2 -->
 				
 				<!-- gallery page 3 -->
-				<div id="tm-gallery-page-noodle" class="tm-gallery-page hidden">
+				<div id="tm-gallery-page-my_certifications" class="tm-gallery-page hidden">
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/08.jpg" alt="Image" class="img-fluid tm-gallery-img" />
