--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ https://templatemo.com/tm-539-simple-house
 			<div class="tm-paging-links">
 				<nav>
 					<ul>
-						<li class="tm-paging-item"><a href="#" class="tm-paging-link active">My Websites</a></li>
-						<li class="tm-paging-item"><a href="#" class="tm-paging-link">My Skills</a></li>
-						<li class="tm-paging-item"><a href="#" class="tm-paging-link">My Certifications</a></li>
+						<li class="tm-paging-item"><a href="#" class="tm-paging-link active">Websites</a></li>
+						<li class="tm-paging-item"><a href="#" class="tm-paging-link">Skills</a></li>
+						<li class="tm-paging-item"><a href="#" class="tm-paging-link">Certifications</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -65,7 +65,7 @@ https://templatemo.com/tm-539-simple-house
 			<!-- Gallery -->
 			<div class="row tm-gallery">
 				<!-- gallery page 1 -->
-				<div id="tm-gallery-page-my_websites" class="tm-gallery-page">
+				<div id="tm-gallery-page-Websites" class="tm-gallery-page">
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/01.jpg" alt="Image" class="img-fluid tm-gallery-img" />
@@ -149,7 +149,7 @@ https://templatemo.com/tm-539-simple-house
 				</div> <!-- gallery page 1 -->
 				
 				<!-- gallery page 2 -->
-				<div id="tm-gallery-page-my_skills" class="tm-gallery-page hidden">
+				<div id="tm-gallery-page-Skills" class="tm-gallery-page hidden">
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/04.jpg" alt="Image" class="img-fluid tm-gallery-img" />
@@ -213,7 +213,7 @@ https://templatemo.com/tm-539-simple-house
 				</div> <!-- gallery page 2 -->
 				
 				<!-- gallery page 3 -->
-				<div id="tm-gallery-page-my_certifications" class="tm-gallery-page hidden">
+				<div id="tm-gallery-page-Certifications" class="tm-gallery-page hidden">
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/08.jpg" alt="Image" class="img-fluid tm-gallery-img" />
