--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ https://templatemo.com/tm-539-simple-house
 			<div class="tm-paging-links">
 				<nav>
 					<ul>
-						<li class="tm-paging-item"><a href="#" class="tm-paging-link active">Websites</a></li>
+						<li class="tm-paging-item"><a href="#" class="tm-paging-link active">Pizza</a></li>
 						<li class="tm-paging-item"><a href="#" class="tm-paging-link">Skills</a></li>
 						<li class="tm-paging-item"><a href="#" class="tm-paging-link">Certifications</a></li>
 					</ul>
@@ -65,7 +65,7 @@ https://templatemo.com/tm-539-simple-house
 			<!-- Gallery -->
 			<div class="row tm-gallery">
 				<!-- gallery page 1 -->
-				<div id="tm-gallery-page-Websites" class="tm-gallery-page">
+				<div id="tm-gallery-page-pizza" class="tm-gallery-page">
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/01.jpg" alt="Image" class="img-fluid tm-gallery-img" />
