--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ https://templatemo.com/tm-539-simple-house
 						<figure>
 							<img src="img/gallery/pic01.jpg" alt="Image" class="img-fluid tm-gallery-img" />
 							<figcaption>
-								<h4 class="tm-gallery-title">Aliquam sagittis</h4>
-								<p class="tm-gallery-description">Nam in suscipit nisi, sit amet consectetur metus. Ut sit amet tellus accumsan</p>
+								<h4 class="tm-gallery-title">Countries Population</h4>
+								<p class="tm-gallery-description">This was a small project I created back in the beginning of college. I believe it is important to show what I started out with to what I can do now.</p>
 								<p class="tm-gallery-price">$65 / $70</p>
 							</figcaption>
 						</figure>
