--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ https://templatemo.com/tm-539-simple-house
 			<!-- Gallery -->
 			<div class="row tm-gallery">
 				<!-- gallery page 1 -->
+				<h3>Beginning Projects</h3>
 				<div id="tm-gallery-page-websites" class="tm-gallery-page">
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
@@ -76,6 +77,7 @@ https://templatemo.com/tm-539-simple-house
 							</figcaption>
 						</figure>
 					</article>
+					
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/pic01.jpg" alt="Image" class="img-fluid tm-gallery-img" />
@@ -106,6 +108,7 @@ https://templatemo.com/tm-539-simple-house
 							</figcaption>
 						</figure>
 					</article>
+				<!--
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/05.jpg" alt="Image" class="img-fluid tm-gallery-img" />
@@ -146,6 +149,7 @@ https://templatemo.com/tm-539-simple-house
 							</figcaption>
 						</figure>
 					</article>
+				-->
 				</div> <!-- gallery page 1 -->
 				
 				<!-- gallery page 2 -->
