--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@ https://templatemo.com/tm-539-simple-house
 					</ul>
 				</nav>
 			</div>
-
+			<h3><center>Beginning Projects</center></h3>
 			<!-- Gallery -->
 			<div class="row tm-gallery">
 				<!-- gallery page 1 -->
-				<h3>Beginning Projects</h3>
+				
 				<div id="tm-gallery-page-websites" class="tm-gallery-page">
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
