--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ https://templatemo.com/tm-539-simple-house
 				</nav>
 			</div>
 			<h3><center>Beginning Projects</center></h3>
+			<p><center>These Beginning Projects are small things I did back in the beginning of college. I feel it is important to show what I have started with, to what I can do now. Please enjoy some of these lame looking projects!</center></p>
 			<!-- Gallery -->
 			<div class="row tm-gallery">
 				<!-- gallery page 1 -->
@@ -73,7 +74,6 @@ https://templatemo.com/tm-539-simple-house
 							<figcaption>
 								<h4 class="tm-gallery-title">Fusce dictum finibus</h4>
 								<p class="tm-gallery-description">Nam in suscipit nisi, sit amet consectetur metus. Ut sit amet tellus accumsan</p>
-								<p class="tm-gallery-price">$45 / $55</p>
 							</figcaption>
 						</figure>
 					</article>
@@ -84,7 +84,6 @@ https://templatemo.com/tm-539-simple-house
 							<figcaption>
 								<h4 class="tm-gallery-title">Countries Population</h4>
 								<p class="tm-gallery-description">This was a small project I created back in the beginning of college. I believe it is important to show what I started out with to what I can do now.</p>
-								<p class="tm-gallery-price">$65 / $70</p>
 							</figcaption>
 						</figure>
 					</article>
@@ -93,7 +92,7 @@ https://templatemo.com/tm-539-simple-house
 							<img src="img/gallery/03.jpg" alt="Image" class="img-fluid tm-gallery-img" />
 							<figcaption>
 								<h4 class="tm-gallery-title">Sed varius turpis</h4>
-								<p class="tm-gallery-description">Nam in suscipit nisi, sit amet consectetur metus. Ut sit amet tellus accumsan</p>
+								<p class="tm-gallery-description">Nam in suscipit nisi, sit amet consectetur metus. Ut sit amet tellus</p>
 								<p class="tm-gallery-price">$30.50</p>
 							</figcaption>
 						</figure>
