--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@ https://templatemo.com/tm-539-simple-house
 				</nav>
 			</div>
 			<h3><center>Beginning Projects</center></h3>
-			<p><center>These Beginning Projects are small things I did back in the beginning of college. I feel it is important to show what I have started with, to what I can do now. Please enjoy some of these lame looking projects!</center></p>
+			<p class="col-12 text-center">These Beginning Projects are small things I did back in the beginning of college. I feel it is important to show what I have started with, to what I can do now. Please enjoy some of these lame looking projects!
+			</p>
+			
 			<!-- Gallery -->
 			<div class="row tm-gallery">
 				<!-- gallery page 1 -->
