--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@ https://templatemo.com/tm-539-simple-house
 			<header class="row tm-welcome-section">
 				<h2 class="col-12 text-center tm-section-title">Welcome to My World</h2>
 				<p class="col-12 text-center">Hello, My name is Sarah McIntosh-Bartholomew. I am a transplant from Philadelphia who current resides in Bethel Park. I am a Web developer, SEO stragtist, and someone who has passion in Marketing. Welcome to my World! Come explore with me.
+				<br>
+					Below I plan on having different levels of projects shown.
+				<br>
+					These beginning projects are small things I did back in the beginning of college. I feel it is important to show what I have started with, to what I can do now. Please enjoy some of these lame looking projects!	
+				<br>
+					Medium Projects coming
+				<br>
+					Advance Projects coming
 				</p>
 			</header>
 			
