--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@ https://templatemo.com/tm-539-simple-house
 				<br>
 					These beginning projects are small things I did back in the beginning of college. I feel it is important to show what I have started with, to what I can do now. Please enjoy some of these lame looking projects!	
 				<br>
-					Medium Projects coming
+					Medium Projects coming soon
 				<br>
-					Advance Projects coming
+					Advance Projects coming soon
 				</p>
 			</header>
 			
@@ -69,9 +69,8 @@ https://templatemo.com/tm-539-simple-house
 					</ul>
 				</nav>
 			</div>
+			
 			<h3><center>Beginning Projects</center></h3>
-			<p class="col-12 text-center">These Beginning Projects are small things I did back in the beginning of college. I feel it is important to show what I have started with, to what I can do now. Please enjoy some of these lame looking projects!
-			</p>
 			
 			<!-- Gallery -->
 			<div class="row tm-gallery">
