--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@ https://templatemo.com/tm-539-simple-house
 					</article>
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
-							<img src="img/gallery/03.jpg" alt="Image" class="img-fluid tm-gallery-img" />
+							<img src="img/gallery/pic00.jpg" alt="Image" class="img-fluid tm-gallery-img" />
 							<figcaption>
-								<h4 class="tm-gallery-title">Sed varius turpis</h4>
-								<p class="tm-gallery-description">Nam in suscipit nisi, sit amet consectetur metus. Ut sit amet tellus</p>
-								<p class="tm-gallery-price">$30.50</p>
+								<h4 class="tm-gallery-title">Girl Scout Troop</h4>
+								<p class="tm-gallery-description">This is a website I am building for my little sister's girl scout troop</p>
 							</figcaption>
 						</figure>
 					</article>
+				<!--
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/04.jpg" alt="Image" class="img-fluid tm-gallery-img" />
@@ -116,6 +116,7 @@ https://templatemo.com/tm-539-simple-house
 							</figcaption>
 						</figure>
 					</article>
+				-->
 				<!--
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
