--- a/index.html
+++ b/index.html
@@ -91,14 +91,15 @@ https://templatemo.com/tm-539-simple-house
 						<figure>
 							<img src="img/gallery/pic01.jpg" alt="Image" class="img-fluid tm-gallery-img" />
 							<figcaption>
-								<h4 class="tm-gallery-title">Countries Population</h4>
+								<h4 class="tm-gallery-title"><a href ="SarahMcI425.github.io/Self_Guided/index.html
+									">Countries Population </a></h4>
 								<p class="tm-gallery-description">This was a small project I created back in the beginning of college. I believe it is important to show what I started out with to what I can do now.</p>
 							</figcaption>
 						</figure>
 					</article>
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
-							<img src="img/gallery/pic00.jpg" alt="Image" class="img-fluid tm-gallery-img" />
+							<img src="img/gallery/pic02.jpg" alt="Image" class="img-fluid tm-gallery-img" />
 							<figcaption>
 								<h4 class="tm-gallery-title">Girl Scout Troop</h4>
 								<p class="tm-gallery-description">This is a website I am building for my little sister's girl scout troop</p>
