--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ https://templatemo.com/tm-539-simple-house
 							<img src="img/gallery/pic01.jpg" alt="Image" class="img-fluid tm-gallery-img" />
 							<figcaption>
 								<h4 class="tm-gallery-title"><a href ="SarahMcI425.github.io/Self_Guided/index.html
-									">Countries Population </a></h4>
+									"><img scr="img/gallery/pic01.jpg alt="Image">"Countries Population </a></h4>
 								<p class="tm-gallery-description">This was a small project I created back in the beginning of college. I believe it is important to show what I started out with to what I can do now.</p>
 							</figcaption>
 						</figure>
