--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Blugoon HTML Bootstrap 4 Template</title>
+    <title>Sarah's Story</title>
     <meta name="description" content="" />
     <meta name="author" content="Tooplate" />
     <!-- Bootstrap core CSS -->
@@ -31,8 +31,8 @@ https://www.tooplate.com/view/2116-blugoon
               <a href="#"><img src="assets/images/logo-image.jpg" alt="Blugoon by Tooplate" /></a>
             </div>
             <div class="author-content">
-              <h4>Blugoon</h4>
-              <span>Free Bootstrap Theme</span>
+              <h4>Sarah McIntosh-Bartholomew</h4>
+              <span>Professional Profile</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
