--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ https://www.tooplate.com/view/2116-blugoon
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
                 <li><a href="#section1">Intro</a></li>
-                <li><a href="#section2">Features</a></li>
+                <li><a href="#section2">Websites</a></li>
                 <li><a href="#section3">Gallery</a></li>
                 <li><a href="#section4">Contact</a></li>
               </ul>
