--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@ https://www.tooplate.com/view/2116-blugoon
               <form class="isotope-toolbar">
                 <label><input type="radio" data-type="*" checked="" name="isotope-filter" />
                   <span>all</span></label>
-                <label><input type="radio" data-type="pretty" name="isotope-filter" />
-                  <span>pretty</span></label>
-                <label><input type="radio" data-type="sexy" name="isotope-filter" />
-                  <span>sexy</span></label>
+                <label><input type="radio" data-type="Flowers" name="isotope-filter" />
+                  <span>Flowers</span></label>
+                <label><input type="radio" data-type="Locations" name="isotope-filter" />
+                  <span>Locations</span></label>
                 <label><input type="radio" data-type="beach" name="isotope-filter" />
                   <span>beach</span></label
                 >
