--- a/index.html
+++ b/index.html
@@ -187,15 +187,15 @@ https://www.tooplate.com/view/2116-blugoon
                 >
               </form>
               <div class="isotope-box">
-                <div class="isotope-item" data-type="beach">
+                <div class="isotope-item" data-type="Flowers">
                   <figure class="snip1321">
-                    <img src="assets/images/woman-beach.jpg" alt="woman at the beach" />
+                    <img src="assets/images/pic01.jpg" alt="FLowers" />
                     <figcaption>
-                      <a href="assets/images/woman-beach.jpg"
+                      <a href="assets/images/pic01.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"><i class="fa fa-search"></i></a>
-                      <h4>Girl One</h4>
-                      <span>woman at the beach</span>
+                      <h4>One Flower</h4>
+                      <span>Flower at Phipps</span>
                     </figcaption>
                   </figure>
                 </div>
