--- a/index.html
+++ b/index.html
@@ -200,15 +200,15 @@ https://www.tooplate.com/view/2116-blugoon
                   </figure>
                 </div>
 
-                <div class="isotope-item" data-type="sexy">
+                <div class="isotope-item" data-type="Flowers">
                   <figure class="snip1321">
-                    <img src="assets/images/woman-chair-sunshine.jpg" alt="sq-sample26" />
+                    <img src="assets/images/pic02.jpg" alt="sq-sample26" />
                     <figcaption>
-                      <a href="assets/images/woman-chair-sunshine.jpg"
+                      <a href="assets/images/pic02.jpg"
                         data-lightbox="image-1"
-                        data-title="Sunshine Woman"><i class="fa fa-search"></i></a>
-                      <h4>Sexy Lady</h4>
-                      <span>there you go sexy girl</span>
+                        data-title="Flowers"><i class="fa fa-search"></i></a>
+                      <h4>Hanging Flower</h4>
+                      <span>Hanging flower from Phipps</span>
                     </figcaption>
                   </figure>
                 </div>
