--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@ https://www.tooplate.com/view/2116-blugoon
                 <label><input type="radio" data-type="beach" name="isotope-filter" />
                   <span>beach</span></label
                 >
+    <!--Gallery-->
               </form>
               <div class="isotope-box">
                 <div class="isotope-item" data-type="Flowers">
@@ -213,28 +214,28 @@ https://www.tooplate.com/view/2116-blugoon
                   </figure>
                 </div>
 
-                <div class="isotope-item" data-type="pretty">
+                <div class="isotope-item" data-type="Locations">
                   <figure class="snip1321">
-                    <img src="assets/images/woman-pretty.jpg" alt="Pretty Girl" />
+                    <img src="assets/images/pic03.jpg" alt="locations" />
                     <figcaption>
-                      <a href="assets/images/woman-pretty.jpg"
+                      <a href="assets/images/pic03.jpg"
                         data-lightbox="image-1"
-                        data-title="Pretty Girl"><i class="fa fa-search"></i></a>
-                      <h4>Pretty Girl</h4>
-                      <span>red flowers white girl</span>
+                        data-title="Locations"><i class="fa fa-search"></i></a>
+                      <h4>Festival</h4>
+                      <span>Lattern at Phipps</span>
                     </figcaption>
                   </figure>
                 </div>
 
-                <div class="isotope-item" data-type="pretty">
+                <div class="isotope-item" data-type="Flowers">
                   <figure class="snip1321">
-                    <img src="assets/images/escalator-blue.jpg" alt="Escalator Blue" />
+                    <img src="assets/images/epic04.jpg" alt="Escalator Blue" />
                     <figcaption>
-                      <a href="assets/images/escalator-blue.jpg"
+                      <a href="assets/images/pic04.jpg"
                         data-lightbox="image-1"
-                        data-title="Escalator Blue"><i class="fa fa-search"></i></a>
-                      <h4>Escalator Up</h4>
-                      <span>Blue architecture building</span>
+                        data-title="Locations"><i class="fa fa-search"></i></a>
+                      <h4>Into the Back</h4>
+                      <span>Looking into the back</span>
                     </figcaption>
                   </figure>
                 </div>
