--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ https://www.tooplate.com/view/2116-blugoon
 
                 <div class="isotope-item" data-type="Flowers">
                   <figure class="snip1321">
-                    <img src="assets/images/epic04.jpg" alt="Escalator Blue" />
+                    <img src="assets/images/pic04.jpg" alt="back flower" />
                     <figcaption>
                       <a href="assets/images/pic04.jpg"
                         data-lightbox="image-1"
