--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@ https://www.tooplate.com/view/2116-blugoon
 
                 <div class="isotope-item" data-type="Flowers">
                   <figure class="snip1321">
-                    <img src="assets/images/pic04.jpg" alt="back flower" />
+                    <img src="assets/images/pic04.jpg" alt="Flowers" />
                     <figcaption>
                       <a href="assets/images/pic04.jpg"
                         data-lightbox="image-1"
-                        data-title="Locations"><i class="fa fa-search"></i></a>
+                        data-title="Flowers"><i class="fa fa-search"></i></a>
                       <h4>Into the Back</h4>
                       <span>Looking into the back</span>
                     </figcaption>
