--- a/index.html
+++ b/index.html
@@ -240,15 +240,15 @@ https://www.tooplate.com/view/2116-blugoon
                   </figure>
                 </div>
 
-                <div class="isotope-item" data-type="beach">
+                <div class="isotope-item" data-type="Flowers">
                   <figure class="snip1321">
-                    <img src="assets/images/woman-feeling.jpg" alt="woman feeling" />
+                    <img src="assets/images/pic05.jpg" alt="Flowers" />
                     <figcaption>
-                      <a href="assets/images/woman-feeling.jpg"
+                      <a href="assets/images/pic05.jpg"
                         data-lightbox="image-1"
-                        data-title="Her Feeling"><i class="fa fa-search"></i></a>
-                      <h4>Her Feeling</h4>
-                      <span>Ut sollicitudin risus</span>
+                        data-title="Flowers"><i class="fa fa-search"></i></a>
+                      <h4>Hanging Flowers</h4>
+                      <span>Hanging into the pathway</span>
                     </figcaption>
                   </figure>
                 </div>
