--- a/index.html
+++ b/index.html
@@ -253,7 +253,43 @@ https://www.tooplate.com/view/2116-blugoon
                   </figure>
                 </div>
 
-                <div class="isotope-item" data-type="sexy">
+                <div class="isotope-item" data-type="Flowers">
+                  <figure class="snip1321">
+                    <img src="assets/images/pic06.jpg" alt="Flowers" />
+                    <figcaption>
+                      <a href="assets/images/pic06.jpg" 
+                      data-lightbox="image-1" data-title="Flowers">
+                      <i class="fa fa-search"></i></a>
+                      <h4>Smile Flower</h4>
+                      <span>Smiling flower from Phipps</span>
+                    </figcaption>
+                  </figure>
+                </div>
+                 <div class="isotope-item" data-type="sexy">
+                  <figure class="snip1321">
+                    <img src="assets/images/woman-bikini.jpg" alt="Bikini Girl" />
+                    <figcaption>
+                      <a href="assets/images/woman-bikini.jpg" 
+                      data-lightbox="image-1" data-title="Sexy Bikini">
+                      <i class="fa fa-search"></i></a>
+                      <h4>Bikini Girl</h4>
+                      <span>Donec eget massa ante</span>
+                    </figcaption>
+                  </figure>
+                </div>
+                 <div class="isotope-item" data-type="sexy">
+                  <figure class="snip1321">
+                    <img src="assets/images/woman-bikini.jpg" alt="Bikini Girl" />
+                    <figcaption>
+                      <a href="assets/images/woman-bikini.jpg" 
+                      data-lightbox="image-1" data-title="Sexy Bikini">
+                      <i class="fa fa-search"></i></a>
+                      <h4>Bikini Girl</h4>
+                      <span>Donec eget massa ante</span>
+                    </figcaption>
+                  </figure>
+                </div>
+                 <div class="isotope-item" data-type="sexy">
                   <figure class="snip1321">
                     <img src="assets/images/woman-bikini.jpg" alt="Bikini Girl" />
                     <figcaption>
