--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ https://www.tooplate.com/view/2116-blugoon
                   <span>Flowers</span></label>
                 <label><input type="radio" data-type="Locations" name="isotope-filter" />
                   <span>Locations</span></label>
-                <label><input type="radio" data-type="Sky" name="isotope-filter" />
+                <label><input type="radio" data-type="Animals" name="isotope-filter" />
                   <span>beach</span></label
                 >
     <!--Gallery-->
@@ -265,39 +265,39 @@ https://www.tooplate.com/view/2116-blugoon
                     </figcaption>
                   </figure>
                 </div>
-                 <div class="isotope-item" data-type="Sky">
+                 <div class="isotope-item" data-type="Animals">
                   <figure class="snip1321">
-                    <img src="assets/images/pic08.jpg" alt="Sky" />
+                    <img src="assets/images/pic011.jpg" alt="Sky" />
                     <figcaption>
-                      <a href="assets/images/pic08.jpg" 
-                      data-lightbox="image-1" data-title="Sky">
+                      <a href="assets/images/pic11.jpg" 
+                      data-lightbox="image-1" data-title="Animals">
                       <i class="fa fa-search"></i></a>
-                      <h4>Nighttime Sky</h4>
-                      <span>Sunset Time</span>
+                      <h4>Jellyfish</h4>
+                      <span>Jellyfish in Canada</span>
                     </figcaption>
                   </figure>
                 </div>
-                 <div class="isotope-item" data-type="Locations">
+                 <div class="isotope-item" data-type="Animals">
                   <figure class="snip1321">
-                    <img src="assets/images/pic10.jpg" alt="Locations" />
+                    <img src="assets/images/pic12.jpg" alt="Animals" />
                     <figcaption>
-                      <a href="assets/images/pic10.jpg" 
-                      data-lightbox="image-1" data-title="Locations">
+                      <a href="assets/images/pic12.jpg" 
+                      data-lightbox="image-1" data-title="Animals">
                       <i class="fa fa-search"></i></a>
-                      <h4>Fish Flowers</h4>
-                      <span>Festival at Phipps</span>
+                      <h4>Shark</h4>
+                      <span>Shark in Canada</span>
                     </figcaption>
                   </figure>
                 </div>
-                 <div class="isotope-item" data-type="sexy">
+                 <div class="isotope-item" data-type="Animals">
                   <figure class="snip1321">
-                    <img src="assets/images/woman-bikini.jpg" alt="Bikini Girl" />
+                    <img src="assets/images/pic13.jpg" alt="Animals" />
                     <figcaption>
-                      <a href="assets/images/woman-bikini.jpg" 
-                      data-lightbox="image-1" data-title="Sexy Bikini">
+                      <a href="assets/images/pic13.jpg" 
+                      data-lightbox="image-1" data-title="Animals">
                       <i class="fa fa-search"></i></a>
-                      <h4>Bikini Girl</h4>
-                      <span>Donec eget massa ante</span>
+                      <h4>Sawfish</h4>
+                      <span>Sawfish Shark in Canada</span>
                     </figcaption>
                   </figure>
                 </div>
