--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ https://www.tooplate.com/view/2116-blugoon
                 <label><input type="radio" data-type="Locations" name="isotope-filter" />
                   <span>Locations</span></label>
                 <label><input type="radio" data-type="Animals" name="isotope-filter" />
-                  <span>beach</span></label
+                  <span>Animals</span></label
                 >
     <!--Gallery-->
               </form>
@@ -267,7 +267,7 @@ https://www.tooplate.com/view/2116-blugoon
                 </div>
                  <div class="isotope-item" data-type="Animals">
                   <figure class="snip1321">
-                    <img src="assets/images/pic011.jpg" alt="Sky" />
+                    <img src="assets/images/pic011.jpg" alt="Animals" />
                     <figcaption>
                       <a href="assets/images/pic11.jpg" 
                       data-lightbox="image-1" data-title="Animals">
