--- a/index.html
+++ b/index.html
@@ -126,12 +126,13 @@ https://www.tooplate.com/view/2116-blugoon
         </div>
       </section>
 
+ <!-- Websites -->
       <section class="section my-services" data-section="section2">
         <div class="container">
           <div class="section-heading">
-            <h2>Greatest Features</h2>
+            <h2>Websites</h2>
             <div class="line-dec"></div>
-            <span>Praesent posuere fringilla elit, non maximus tellus posuere nec. Nunc eu sapien nec est elementum sodales.</span>
+            <span>Here is a collection of websites I have built. I have included the websites from when I first started coding to show what I have improved from. </span>
           </div>
           <div class="row">
             <div class="col-md-6">
@@ -312,7 +313,7 @@ https://www.tooplate.com/view/2116-blugoon
           <div class="section-heading">
             <h2>Contact</h2>
             <div class="line-dec"></div>
-            <span>Aenean a consectetur mi, sit amet consequat velit. Mauris vitae nunc viverra, mattis arcu quis, vestibulum eros. </span>
+            <span> </span>
           </div>
           <div class="row">
             <div class="right-content">
