--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@ https://www.tooplate.com/view/2116-blugoon
             <div class="col-md-6">
               <div class="service-item">
                 <i class="fa fa-check-square-o"></i>
-                <h4>Trusted Service</h4>
+                <h4><a href = "https://sarahmci425.github.io/Database_Project/index.html" style="text-decoration:none;">Dog Names of Pittburgh</h4>
                 <p>Etiam at porta nulla, et euismod enim. Nullam semper ipsum et dui scelerisque.</p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <i class="fa fa-question-circle"></i>
-                <h4>Need Help?</h4>
+                 <h4><a href = "http://sriramiyer.me/Pittsburgh-Yelp-Data/src/html/Data_Visualizations/" style="text-decoration:none;">Pittsburgh Cuisine</h4>
                 <p>Phasellus orci leo, elementum ac risus id, euismod porta lorem. Quisque feugiat.</p>
               </div>
             </div>
